fixed scrollbar width

--- a/css/base.css
+++ b/css/base.css
@@ -3835,7 +3835,7 @@ dl.stats dd {
 
 * {
     scrollbar-color: var(--border4) var(--bg5);
-    scrollbar-width: thin;
+    scrollbar-width: auto;
 }
 
 *::selection {
